--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
         <img class="picture" src="shikh.jpg" width="200px" height="250px"> </img>
+  <br>
+  <a href="https://xyro-fashiontweeks.jimdosite.com/" target="_blank" alt=<h6> <em>MY PORTFOLIO</em></h6> </a>
     <div class="main">
 
 <div class="row">
